# nw.js_mod

./: LICENSE  README.md  versions.json
info/: args_info.txt  build_linux.txt  build_macos.txt  build_win.txt
patches/: ARM_macOS_package_support.patch  Fix_dump_buildstep_for_ARM.patch  Fix_missing_ffmpeg_lib_in_mac_normal_build.patch  args.gn  do_not_export_private_v8_symbols.patch  fix_build_for_mac_arm64.diff  fix_disable_captive_portal.patch  fix_disable_cdms_lib.patch  fix_disable_click_to_call.patch  fix_disable_media_remoting.patch  fix_json.patch  fix_rtc_enable_win_wgc_false.patch  node-nw.patch  nw_version.patch  size_optimization.patch  ungoogled-chromium_series
patches/cromite/: 00Disable-Component-Updates.patch  00Disable-csp-reports.patch  Disable-NTP-remote-suggestions-by-default.patch  Disable-crash-reporting.patch  Disable-fetching-of-all-field-trials.patch  Disable-various-metrics.patch  Do-not-build-API-keys-infobar.patch  Remove-segmentation-platform.patch  disable_reporting.patch  translate-disable-fetching-of-languages-from-server.patch  updater-disable-updater-pings.patch
patches/ungoogled-chromium/: core_inox-patchset_0001-fix-building-without-safebrowsing.patch  core_ungoogled-chromium_block-requests.patch  core_ungoogled-chromium_fix-building-without-safebrowsing.patch  core_ungoogled-chromium_remove-unused-preferences-fields.patch  core_ungoogled-chromium_toggle-translation-via-switch.patch  extra_bromite_flag-fingerprinting-canvas-image-data-noise.patch  extra_ungoogled-chromium_remove-uneeded-ui.patch
patches/ungoogled-chromium/macos/: fix-disabling-safebrowsing.patch
patches/ungoogled-chromium/win/: windows-fix-building-without-safebrowsing.patch  windows-fix-command-ids.patch
